# lintje

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  Rakefile  build.rs  entrypoint.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  other.yml
.github/workflows/: ci.yml
.semaphore/: semaphore.yml
doc/: examples.md  installation.md  rules.md
script/: build  release  test
src/: branch.rs  command.rs  commit.rs  config.rs  formatter.rs  git.rs  issue.rs  logger.rs  main.rs  rule.rs  rules.rs  test.rs  utils.rs
src/git/: hooks.rs
src/rules/: branch_name_cliche.rs  branch_name_length.rs  branch_name_punctuation.rs  branch_name_ticket_number.rs  diff_changeset.rs  diff_presence.rs  merge_commit.rs  message_co_authored_by.rs  message_empty_first_line.rs  message_line_length.rs  message_presence.rs  message_skip_build_tag.rs  message_ticket_number.rs  message_trailer_line.rs  needs_rebase.rs  rebase_commit.rs  subject_build_tag.rs  subject_capitalization.rs  subject_cliche.rs  subject_length.rs  subject_mood.rs  subject_prefix.rs  subject_punctuation.rs  subject_ticket_number.rs  subject_whitespace.rs
support/docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.ubuntu-x86_64-development  Dockerfile.x86_64-unknown-linux-gnu  ash_test  bash_test
support/script/: build_deb
support/test/: failure_script
