[package]
name = "lintje"
version = "0.11.2"
authors = ["Tom de Bruijn <tom@tomdebruijn.com>"]
edition = "2021"
repository = "https://github.com/lintje/lintje"
license = "MIT"
description = "Lintje is an opinionated linter for Git."
keywords = ["git", "linter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "=3.1.18", features = ["derive", "cargo"] }
regex = "1.5"
lazy_static = "1.4"
unicode-width = "0.1.9"
unicode-segmentation = "1.8.0"
termcolor = "1.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "2.1"

[profile.release]
lto = true
